[metadata]
name = odhin
description = Source deblending for MUSE
long_description = file: README.rst
author = Raphael Bacher
keywords = astronomy, astrophysics, science, muse, vlt
# license = MIT License
# license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    astropy
    matplotlib
    mpdaf
    numpy
    photutils
    scikit-image
    scikit-learn
    scipy
    tqdm

[options.extras_require]
docs = numpydoc; sphinx_rtd_theme; sphinx-automodapi; nbsphinx

[isort]
multi_line_output = 3
include_trailing_comma = True

[flake8]
max-line-length = 88
